--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,18 +2,20 @@
 
 %html{ lang: :en }
 	%head
-		= stylesheet_link_tag "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
-		= stylesheet_link_tag "//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+	= stylesheet_link_tag "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
+	= stylesheet_link_tag "//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
 
-		= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
+	= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
 
-		= javascript_include_tag "application", "data-turbolinks-track" => true
-		= javascript_include_tag '//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'
+	= javascript_include_tag "application", "data-turbolinks-track" => true
+	= javascript_include_tag '//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'
 
-		= csrf_meta_tags
+	= csrf_meta_tags
 
-	%body
-		= yield
+%body
+	= yield
+	= link_to "Resources", articles_path
+
 
 
 
