--- a/app/views/partials/_navbar.html.haml
+++ b/app/views/partials/_navbar.html.haml
@@ -29,4 +29,6 @@
 								= link_to 'Log In', login_path
 							%li
 								= link_to 'Sign Up', signup_path
+							%li
+								= link_to "Resources", resources_path
 
