--- a/app/views/partials/_navbar.html.haml
+++ b/app/views/partials/_navbar.html.haml
@@ -30,5 +30,5 @@
 							%li
 								= link_to 'Sign Up', signup_path
 							%li
-								= link_to "Resources", resources_path
+								= link_to "Useful links", categories_path
 
