add post and comment model along with basic post CRUD controller actions and views

--- a/app/views/partials/_navbar.html.haml
+++ b/app/views/partials/_navbar.html.haml
@@ -17,6 +17,9 @@
 						%li
 							%a{ href: '/' }
 								Home
+						%li
+							= link_to "Discussion", posts_path
+								
 						- if @current_user.present?
 							%li
 								%a
