--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -11,7 +11,7 @@
           submitted 
           = time_ago_in_words(post.created_at)
           ago by
-          // = post.user.name
+          = post.user.name
           %br
           = post.comments.count
           comments 
