--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -4,13 +4,10 @@
 		.col-md-offset-3.col-md-6{ style: 'margin-top:6em;'}
 			.well
 				%h2 Sign Up
-				= form_tag sessions_path do
+				= form_tag registration_path do
 					.form-group
-						= label_tag :first_name
-						= text_field_tag :first_name, '', class: 'form-control'
-					.form-group
-						=label_tag :last_name
-						= text_field_tag :last_name, '', class: 'form-control'
+						= label_tag :name
+						= text_field_tag :name, '', class: 'form-control'
 					.form-group
 						= label_tag :email
 						= text_field_tag :email, '', class: 'form-control'
