--- a/app/views/partials/_comment.html.haml
+++ b/app/views/partials/_comment.html.haml
@@ -2,7 +2,4 @@
   .media-body
     = comment.body
   %small
-    submitted 
-    = time_ago_in_words(post.created_at)
-    ago by
-    = comment.user.name
+    = "submitted #{time_ago_in_words(comment.created_at)} ago by #{comment.user.name}"
