--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -4,6 +4,6 @@
 - @categories.each do |category|
   %li= link_to category.title, category_resources_path(category)
 
-= render "partials/category_form"
+= render "categories/form"
 
 
