--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,9 +14,9 @@
 
 
 	%body
-		= render 'partials/navbar'
+		= render 'application/navbar'
 
-		= render 'partials/flash'
+		= render 'application/flash'
 
 		= yield
 
