--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,12 +6,12 @@
       .media
         .media-body
           %h4.media-heading
-            = link_to post.title, post
+            = link_to post, post
         %small
           submitted 
           = time_ago_in_words(post.created_at)
           ago by
-          = post.user.name
+          = post.user
           %br
           = post.comments.count
           comments 
