--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -5,4 +5,4 @@
   %li= link_to resource.name, resource.url
   %p= resource.description
 
-= render "partials/resource_form"
+= render "resources/form"
