--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,9 +1,11 @@
 %h4 Please feel free to add categories that you think would be helpful
 
-%ul
-- @categories.each do |category|
-  %li= link_to category.title, category_resources_path(category)
+.col-sm-4
+  .list-group
+    %ul
+    - @categories.each do |category|
+      %li.list-group-item= link_to category.title, category_resources_path(category)
 
-= render "categories/form"
+    = render "categories/form"
 
 
