--- a/app/views/resources/_form.html.haml
+++ b/app/views/resources/_form.html.haml
@@ -1,10 +1,13 @@
-= form_for [@category, @resource] do |f|
-  %p
-    = f.label :name
-    = f.text_field :name
-    = f.label :description
-    = f.text_area :description
-    = f.label :url
-    = f.text_field :url
-    / = f.hidden_field_tag :user_id, current_user.id
-    = f.submit "Create new resource!"
+.container
+  .row
+    .col-md-6
+      = form_for [@category, @resource], class: 'form-horizontal' do |f|
+        .form-group
+          = f.label :name
+          = f.text_field :name, class: 'form-control'
+          = f.label :description
+          = f.text_area :description, class: 'form-control'
+          = f.label :url
+          = f.text_field :url, class: 'form-control'
+          / = f.hidden_field_tag :user_id, current_user.id
+          = f.submit "Create new resource!"
