start rake task to load resource links

--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -4,7 +4,9 @@
   .list-group
     %ul
     - @resources.each do |resource|
-      %li.list-group-item= link_to resource.name, resource.url
-      %p.list-group-item= resource.description
+      %li.list-group-item
+        = link_to resource.name, resource.url, target: "_blank"
+      %li.list-group-item
+        = resource.description
 
     = render "resources/form"
