--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,10 +1,12 @@
-%h4 Please feel free to add categories that you think would be helpful
+%h4.col-sm-offset-1 Please feel free to add categories that you think would be helpful
 
-.col-sm-4
+.col-sm-4.col-sm-offset-1
   .list-group
     %ul
     - @categories.each do |category|
-      %li.list-group-item= link_to category.title, category_resources_path(category)
+      %li.list-group-item
+        %h4
+          = link_to category.title, category_resources_path(category)
 
     = render "categories/form"
 
