--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,13 +1,14 @@
-%h4.col-sm-offset-1 Please feel free to add categories that you think would be helpful
-
-.col-sm-4.col-sm-offset-1
-  .list-group
-    %ul
-    - @categories.each do |category|
-      %li.list-group-item
-        %h4
-          = link_to category.title, category_resources_path(category)
-
-    = render "categories/form"
+.container
+  .col-sm-8
+    %h3 Please feel free to add categories that you think would be helpful 
+    %br
+    .list-group
+      %ul
+      - @categories.each do |category|
+        %li.list-group-item
+          %h4
+            = link_to category.title, category_resources_path(category)
+      %br
+      = render "categories/form"
 
 
