--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -11,7 +11,7 @@
 
     %h2 
       / = pluralize @post.comments.count 
-      Comment
+      Comments
 
     %hr
     - @post.comments.each do |comment|
