Added title tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 		= javascript_include_tag '//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'
 
 		= csrf_meta_tags
-
+		%title= "San Diego Ruby Study Group"
 
 	%body
 		= render 'application/navbar'
