--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
 
 		= csrf_meta_tags
 		%title= "San Diego Ruby Study Group"
+		= favicon_link_tag '/assets/favicon.ico'
 
 	%body
 		= render 'application/navbar'
