--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -2,4 +2,9 @@
 .container
 	.row
 		.jumbotron
-			%h1 Woot!
+			%h1 SD Ruby Study Group
+			%p San Diego's Ruby Study Group is a super rad bi-monthly meetup for anyone new to Ruby on Rails. We get together to work through group challenges, help answer each other's questions, and occasionally listen to speakers on intro topics. Generally, we've got a few pros on deck who are available to answer questions.
+			%p
+				%button.btn.btn-primary.btn-sm.white-link-font=link_to "Join Our Next Meetup!", "http://www.meetup.com/sdruby/events/197643122/", :target => "_blank"
+
+
