Added columns on home page to describe our group

--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -6,5 +6,13 @@
 			%p San Diego's Ruby Study Group is a super rad bi-monthly meetup for anyone new to Ruby on Rails. We get together to work through group challenges, help answer each other's questions, and occasionally listen to speakers on intro topics. Generally, we've got a few pros on deck who are available to answer questions.
 			%p
 				%button.btn.btn-primary.btn-sm.white-link-font=link_to "Join Our Next Meetup!", "http://www.meetup.com/sdruby/events/197643122/", :target => "_blank"
+		.col-md-4
+			%h3 Why SD Ruby?
+			%p The Ruby and Rails worlds are known for collaboration and community. We provide a place for rubyists to focus on helping one another while solving fun problems. Finding new challenges is the name of the game, and we're always looking forward to learning something new.
+		.col-md-4
+			%h3 Who Is Welcome?
+			%p We encourage everyone, from Ruby newbie to expert, to join us. If you have any interest in Ruby at all, we've got a spot here with your name on it. If you're a recruiter or your company is looking for talented full stack developers, come on in. We're excited to meet new members and support the Ruby and Rails communities.
 
-
+		.col-md-4
+			%h3 Where Can I Get Help?
+			%p 	Whether you're looking for the answer to a Ruby related question, hoping for a job, or just want to learn more, we've got a resource for you. View our #{link_to "projects", 'https://github.com/SDRubyStudyGroup/'} on Github (fork and contribute!), join our #{link_to "Meetup Group", 'http://www.meetup.com/sdruby/events/197643122/'}, or check out our #{link_to "Google Group", 'https://groups.google.com/forum/#!forum/sdruby'}.
