--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -20,3 +20,6 @@
 		%h3 Study Group Meetup
 		%p When: every other Tuesday - check out #{link_to "Meetup Group", 'http://www.meetup.com/sdruby/events/197643122/'} for exact dates
 		%p Where: Ansir Innovation Center - 4685 Convoy St. #210 , San Diego, CA
+		%div{:style => 'width: 800px;'}
+			%div{:id => "basic_map", :style => 'width: 800px; height: 400px;'}
+	%br
