--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -8,5 +8,6 @@
         = link_to resource.name, resource.url, target: "_blank"
       %li.list-group-item
         = resource.description
+        = link_to "New Comment"
 
     = render "resources/form"
