--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -16,10 +16,17 @@
 			%h3 Where Can I Get Help?
 			%p 	Whether you're looking for the answer to a Ruby related question, hoping for a job, or just want to learn more, we've got a resource for you. View our #{link_to "projects", 'https://github.com/SDRubyStudyGroup/'} on Github (fork and contribute!), join our #{link_to "Meetup Group", 'http://www.meetup.com/sdruby/events/197643122/'}, or check out our #{link_to "Google Group", 'https://groups.google.com/forum/#!forum/sdruby'}.
 	%br	
-	.custom-boxed-content
-		%h3 Study Group Meetup
-		%p When: every other Tuesday - check out #{link_to "Meetup Group", 'http://www.meetup.com/sdruby/events/197643122/'} for exact dates
-		%p Where: Ansir Innovation Center - 4685 Convoy St. #210 , San Diego, CA
-		%div{:style => 'width: 800px;'}
-			%div{:id => "basic_map", :style => 'width: 800px; height: 400px;'}
+	.custom-boxed-content		
+		.col-sm-4
+			%h3 Study Group Meetup
+			%p 
+			%strong When: 
+			every other Tuesday - check out #{link_to "Meetup Group", 'http://www.meetup.com/sdruby/events/197643122/'} for exact dates
+			%p 
+			%strong Where:
+			Ansir Innovation Center - 4685 Convoy St. #210 , San Diego, CA
+			%p 
+			%b What to bring:
+			laptop recommended by not required. just bring that curiousity!
+		%iframe{:src => "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26821.888681939516!2d-117.15773075650334!3d32.8257570472286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dbff9420971b35%3A0xbd23a802437fa6dc!2s4685+Convoy+St+%23210%2C+Empire+Square+Shopping+Center%2C+San+Diego%2C+CA+92111!5e0!3m2!1sen!2sus!4v1407554410073",:width => "730px", :height => "250px", :frameborder => "0", :style => "border:0"}
 	%br
