--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -27,6 +27,7 @@
 			Ansir Innovation Center - 4685 Convoy St. #210 , San Diego, CA
 			%p 
 			%b What to bring:
-			laptop recommended by not required. just bring that curiousity!
-		%iframe{:src => "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26821.888681939516!2d-117.15773075650334!3d32.8257570472286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dbff9420971b35%3A0xbd23a802437fa6dc!2s4685+Convoy+St+%23210%2C+Empire+Square+Shopping+Center%2C+San+Diego%2C+CA+92111!5e0!3m2!1sen!2sus!4v1407554410073",:width => "730px", :height => "250px", :frameborder => "0", :style => "border:0"}
+			laptop recommended by not required. Just bring that curiousity!
+		%div#google-map-container
+			%iframe{:src => "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26821.888681939516!2d-117.15773075650334!3d32.8257570472286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dbff9420971b35%3A0xbd23a802437fa6dc!2s4685+Convoy+St+%23210%2C+Empire+Square+Shopping+Center%2C+San+Diego%2C+CA+92111!5e0!3m2!1sen!2sus!4v1407554410073",:width => "730px", :height => "175px", :frameborder => "0", :style => "border:0"}
 	%br
