--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -1,18 +1,21 @@
 
-%h1= @category.title
-
-.col-sm-4
-  .list-group
-    %ul
-    - @resources.each do |resource|
-      %li.list-group-item
-        = link_to resource.name, resource.url, target: "_blank"
-      %li.list-group-item
-        = resource.description
-        = link_to "New Comment" 
-        = render "comments/comment_resource"
-
-    = render "resources/form"
 
 / pass to comment controller and have it handle wehre it wants to go
+
+.container
+  .col-sm-8
+    %h3= @category.title 
+    %br
+    .list-group
+      %ul
+      - @resources.each do |resource|
+        %li.list-group-item
+          %h4
+            = link_to resource.name, resource.url, target: "_blank"
+          - if resource.description.present? == true     
+            %p
+              = resource.description
+          - else
+      %br
+      = render "resources/form"
 
