--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -7,7 +7,8 @@
       - @categories.each do |category|
         %li.list-group-item
           %h4
-            = link_to category.title, category_resources_path(category)
+            = link_to category.title, category_resources_path(category) 
+            .right= link_to category.resources.count, category_resources_path(category) 
       %br
       = render "categories/form"
 
