--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -15,7 +15,7 @@
           - if resource.description.present? == true     
             %p
               = resource.description
-              = render "comments/comment_resource"
+              / = render "comments/comment_resource"
           - else
       %br
       = render "resources/form"
