--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -8,6 +8,8 @@
         %li.list-group-item
           %h4
             = link_to category.title, category_resources_path(category)
+            .right
+              = link_to "#", category_resources_path(category)
       %br
       = render "categories/form"
 
