added a javascript file for hiding comments

--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -13,9 +13,11 @@
             %p
               = resource.description
           - else
-          %button 
+          %button{:class => "btn hidecomment"}
             New comment
-          = render 'comments/new_comment', commentable: resource
+            = render 'comments/new_comment', commentable: resource
       %br
+
+
       = render "resources/form"
 
