able to add comments to resources on page

--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -16,6 +16,11 @@
             = link_to "New Comment", "#" , :class => "see-form"
             .dropdown-toggle
               = render 'comments/new_comment', commentable: resource
+          - resource.comments.each do |comment|
+            %li.list-group-item
+              %p
+                = comment.body
+                = comment.user_id
               
       %br
 
