--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -15,6 +15,8 @@
           %br
           = post.comments.count
           comments 
+          - if post.user == @current_user
+            = link_to "Delete", "/posts/"+post.id.to_s, :method => :DELETE, :class => "btn btn-sm btn-danger pull-right"
   .col-sm-4
     %h4.text-center Get out there and say something
     %p.text-center Join the Ruby on Rails Discussion. Ask questions or just tell us about some full stack awesomeness!
