--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -16,9 +16,9 @@
           = post.comments.count
           comments
           %br 
-          - if post.user == @current_user
+          - if post.user == current_user
             = link_to "Edit", "/posts/"+post.id.to_s+"/edit", :method => :GET, :class => "btn btn-sm btn-primary"      
-          - if post.user == @current_user
+          - if post.user == current_user
             = link_to "Delete", "/posts/"+post.id.to_s, :method => :DELETE, :class => "btn btn-sm btn-danger"     
   .col-sm-4
     %h4.text-center Get out there and say something
