--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -22,17 +22,17 @@
 							%li
 								= link_to "Useful links", categories_path
 								
-						- if @current_user.present?
+						- if current_user.present?
 							%li
 								%a
 									Hi
-									= @current_user.name.titleize
+									= current_user.name.titleize
 							%li
-								= link_to 'Log Out', logout_path, method: :delete
+								= link_to 'Log Out', destroy_user_session_path, method: :delete
 						- else
 							%li
-								= link_to 'Log In', login_path
+								= link_to 'Log In', new_user_session_path
 							%li
-								= link_to 'Sign Up', signup_path
+								= link_to 'Sign Up', new_user_registration_path
 							
 
