--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -4,7 +4,7 @@
       = @post.title
     %small
       = "submitted #{time_ago_in_words(@post.created_at)} ago by " 
-      = @post.user
+      = @post.user.name
     %hr
 
     = markdown @post.body 
