--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -2,6 +2,6 @@
   .media-body
     = comment.body
   %small
-    = "submitted #{time_ago_in_words(comment.created_at)} ago by #{comment.user}"
-  - if comment.user == @current_user
+    = "submitted #{time_ago_in_words(comment.created_at)} ago by #{comment.user.name}"
+  - if comment.user == current_user
     = link_to "Delete", "/comments/"+comment.id.to_s, :method => :DELETE, :class => "btn btn-sm btn-danger pull-right"
